# advent_of_code

./: .gitignore
2020/: inputs_d1
2020/src/: main.rs
2022/: Cargo.toml
2022/src/: d1.rs  d10.rs  d11.rs  d12.rs  d13.rs  d14.rs  d15.rs  d16.rs  d17.rs  d2.rs  d3.rs  d4.rs  d5.rs  d6.rs  d7.rs  d8.rs  d9.rs  main.rs
2023/: Cargo.toml  README.md  build.rs
2023/.cargo/: config.toml
2023/cudalib/: Cargo.toml
2023/cudalib/src/: add.rs  day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  lib.rs
2023/src/: add.rs  day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  main.rs  utils.rs
