[package]
name = "aoc_2022"
version = "0.1.0"
authors = ["Mark Riley <mark@eucleo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = '2.33.3'
colored = "2"
anyhow = "1.0"
crossterm = "0.25.0"
bytebuffer = "2.0.1"