[package]
name = "aoc-2023"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["cudalib"]

[dependencies]
cust = "0.3.2"

byteorder = "=1.4.0"
cc = "=1.0.78"
jobserver = "=0.1.25"
log = "=0.4.17"
rayon = "=1.5.1"
rayon-core = "=1.10.0"
regex = "=1.7.1"
regex-syntax = "=0.6.28"
thread_local = "=1.1.4"
tracing-subscriber = "=0.3.17"
anyhow = "1.0.75"
aoc-2023-cudalib = { path = "./cudalib" }

[build-dependencies]
cuda_builder = "0.3.0"
